<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#343539"
    tools:context=".MainActivity"
    android:windowSoftInputMode="stateUnchanged|adjustResize"
    >

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:name="com.example.tifu.Tifu"
        android:layout_width="413dp"
        android:layout_height="659dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:layout="@layout/fragment_tifu" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="410dp"
        android:layout_height="69dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/fragmentContainerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/tifu"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/tifu_button_text"
            android:textAllCaps="false"
            android:textSize="12sp" />

        <Button
            android:id="@+id/dadJokes"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/dadjokes_button_text"
            android:textAllCaps="false"
            android:textSize="12sp" />

        <Button
            android:id="@+id/savedJokes"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/saved_jokes_text"
            android:textAllCaps="false"
            android:textSize="12sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>